--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
+    <img src="" width="2690" height="2240">
         </head>
         <body>
         <header>
