--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <img src="" width="2690" height="2240">
+    <img src="file:///C:/Users/User/Downloads/Group%204.png" width="2690" height="2240">
         </head>
         <body>
         <header>
