--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="./Перші Страви_files/style.css">
+        <link rel="stylesheet" href="./style.css">
         <title>Перші Страви</title>
         </head>
     <body>
-            <img src="./Перші Страви_files/Group 4.png" width="2690" height="2240">
+            <img src="Group 4.png" width="2690" height="2240">
         <header>
             <h1>Перші Страви</h1>
         </header>
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="./Перші Страви_files/images" width="500px" height="400px" alt="">
+                    <img src="images" width="500px" height="400px" alt="">
                 </div>
                 <div class="content">
                     <a href="https://www.unian.ua/recipes/first-courses/borscht/postnyy-borshch-recept-s-kilkoy-i-s-fasolyu-12087990.html"><h2>Пісний борщ з кількою і квасолею</h2></a>
@@ -22,7 +22,7 @@
 
         <div class="card">
             <div class="imgBx">
-                <img src="./Перші Страви_files/images(1)" width="500px" height="400px" alt="">
+                <img src="" width="500px" height="400px" alt="">
             </div>
             <div class="content">
                 <a href="https://www.vkusnyblog.com/recipe/kurinyj-sup-s-domashnej-lapshoj/comment-page-1/"><h2>Куриный суп с домашней лапшой</h2></a>
@@ -53,6 +53,6 @@
             <a href="https://ru.pinterest.com/pin/321444492161733013/"><h2>Уха из головы горбуши с рисом</h2></a>
        </div>
     </div>
-</div>
-        </main>    
-</body></html>
+       </div>
+    </body>
+</html>
