--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Перші Страви</title>
         </head>
     <body>
-            <img src="Group 4.png" width="2690" height="2240">
-        <header>
+        <header
             <h1>Перші Страви</h1>
+            <img src="Group 4.png" width="2690px" height="2240px">
         </header>
         <main>
         <div class="container">
