--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header
             <h1>Перші Страви</h1>
-            <img src="Group 4.png" width="2690px" height="2240px">
+            <img src="file:///C:/Users/User/Downloads/Group%204.png" width="2690" height="2240">
         </header>
         <main>
         <div class="container">
