--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Перші Страви</title>
         </head>
     <body>
-        <header
+        <header>
             <h1>Перші Страви</h1>
         </header>
         <main>
