--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html>
     <head>
-        <img src="https://m.media-amazon.com/images/I/519V-Pb0bOL._AC_SX679_.jpg" width="2690px" height="2240px">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="./style.css">
         <title>Перші Страви</title>
+        <img src="https://m.media-amazon.com/images/I/519V-Pb0bOL._AC_SX679_.jpg" width="2690px" height="2240px">
         </head>
     <body>
-        <header
+        <header>
             <h1>Перші Страви</h1>
         </header>
-        <main>
         <div class="container">
             <div class="card">
                 <div class="imgBx">
