--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <header>
             <h1>Перші Страви</h1>
         </header>
+         <a href="">Рецепти</a>
         <div class="container">
             <div class="card">
                 <div class="imgBx">
